--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/66bc8f2e9b.js" crossorigin="anonymous"></script>
-    <title>Hola</title>
+    <title>Spotify</title>
 </head>
 
 <body>
